feat: [contract] start phase 3 graph backend
